# ali-middleware-4

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  arch_setup_dependency.sh  travis_setup_dependency.sh
lib/: boost_asio_event.hpp  boost_asio_quick_connect.hpp  conn_pool.hpp  dubbo_client.cc  dubbo_client.hpp  http_forwarder.hpp  json_serializer.hpp  kv_serializer.hpp  pool.hpp  traceable_list.hpp  unix_quick_connect.hpp
lib/rlib/: README.md  stdio.hpp  string.hpp
lib/rlib/sys/: os.hpp
src/: Makefile  consumer_agent.cc  consumer_agent.hpp  etcd_kv_service.cc  etcd_kv_service.hpp  etcd_service.cc  etcd_service.hpp  logger.hpp  main.cc  producer_agent.cc  producer_agent.hpp  producer_selector.cc  producer_selector.hpp  provider_agent.cc  provider_agent.hpp  provider_selector.cc  provider_selector.hpp
test/: boost_asio_event.cc  conn_pool.cc  consumer.sh  dubbo.cc  manual-consumer.sh  pool.cc  serialize.cc  tcpping.cc  test.sh  traceable_list.cc
